STYLE: Convert CMake-language commands to lower case
Ancient CMake versions required upper-case commands.  Later command names
became case-insensitive.  Now the preferred style is lower-case.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -320,7 +320,7 @@ function(GroundTruthTest2D tempDir inputFile) # other command-line parameters
       ${TESTING_OUTPUT_PATH}/itkMontageGT${tempDir}Pairs_
       0 1 1 1 1 0 0 0 1
     )
-  SET_TESTS_PROPERTIES(itkMontageGroundTruthRun${tempDir}
+  set_tests_properties(itkMontageGroundTruthRun${tempDir}
     PROPERTIES DEPENDS itkMontageGroundTruthMake${tempDir})
 endfunction()
 
@@ -486,7 +486,7 @@ itk_add_test(NAME itkMontageGroundTruthRun${tempDir}
     ${TESTING_OUTPUT_PATH}/itkMontageGT${tempDir}Pairs_
     0 1 1 1 1 0 0 0 1
   )
-SET_TESTS_PROPERTIES(itkMontageGroundTruthRun${tempDir}
+set_tests_properties(itkMontageGroundTruthRun${tempDir}
   PROPERTIES DEPENDS itkMontageGroundTruthMake${tempDir})
 
 if (EXISTS ${CMAKE_CURRENT_LIST_DIR}/Input/Ti7/Region2_150_Mosaic36Flat/36/1323.tif)
